# vsb-fei-inf

./: .gitmodules  README.md
osy/cv1/: CMakeLists.txt  generator.cpp  scitacka.cpp
uro/project02/: CMakeLists.txt
uro/project02/.cache/clangd/index/: browserbtn.cpp.034A85A87044E459.idx  browserbtn.hpp.0007C5660B60FCEC.idx  details.cpp.EEC7036C284E8F25.idx  details.hpp.0C1796331CEDDBEA.idx  filemenu.cpp.1C41AED41215C2D8.idx  filemenu.hpp.1865F37244F3DEC0.idx  header.cpp.1AB56CF5DF1140E4.idx  header.hpp.29BBFD95F4AD4B14.idx  info.cpp.95017839AC67B446.idx  info.hpp.7975DD3BE1098698.idx  itemmodel.cpp.4A570A147A782082.idx  itemmodel.hpp.3A7D59425FA48701.idx  layout.cpp.713BF6C38BB9446F.idx  layout.hpp.DC1B0C21E96EF756.idx  main.cpp.01B0C9B3D58E8396.idx  menubar.cpp.B73C6DECE309F7BB.idx  menubar.hpp.FD9A768B45BF940F.idx  newtrail.cpp.88F6F6BC0EB2B7DD.idx  newtrail.hpp.3AE84409ED292D87.idx  searchinput.cpp.C91A3247E4C61D93.idx  searchinput.hpp.5F1C91D5F9AD50CE.idx  tabview.cpp.8C5F00C873884724.idx  tabview.hpp.7E386884C9072FEA.idx  trail.cpp.E3A0F689104ED7E9.idx  trail.hpp.07333EEE9428514F.idx  trailsview.cpp.7BBE0F1AD8BDD760.idx  trailsview.hpp.4AC2DE5978F03E4D.idx  view.cpp.FEAEBC68504A4B58.idx  view.hpp.8427F88DEE74C70E.idx  window.cpp.EA7453DF15C2DEEE.idx  window.hpp.0C5EA2457A2C6FC1.idx
uro/project02/src/: main.cpp
uro/project02/src/app/: layout.cpp  layout.hpp  window.cpp  window.hpp
uro/project02/src/app/menubar/: filemenu.cpp  filemenu.hpp  info.cpp  info.hpp  menubar.cpp  menubar.hpp
uro/project02/src/app/search/: searchinput.cpp  searchinput.hpp
(+402 files in other folders)
